# docs/swagger.yaml
@@ -1069,6 +1069,8 @@ definitions:
       price_type:
         example: estimated
         type: string
+      pricing:
+        $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.OrderPricingResponse'
       tariff_id:
         example: 22222222-2222-2222-2222-222222222222
         type: string
@@ -1132,6 +1134,39 @@ definitions:
         items:
           $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.PassengerOrderResponse'
         type: array
+    type: object
+  github_com_kishert-lab_taxi-platform_internal_dto.OrderPricingResponse:
+    properties:
+      assigned_tariff_id:
+        example: 22222222-2222-2222-2222-222222222222
+        type: string
+      assigned_taxi_park_id:
+        example: 55555555-5555-5555-5555-555555555555
+        type: string
+      estimated_price:
+        $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.MoneyResponse'
+      estimated_price_max:
+        $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.MoneyResponse'
+      estimated_price_min:
+        $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.MoneyResponse'
+      estimated_price_source:
+        example: car_class_catalog
+        type: string
+      final_price:
+        $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.MoneyResponse'
+      is_final:
+        type: boolean
+      message:
+        example: Цена будет рассчитана после назначения водителя
+        type: string
+      price_available:
+        type: boolean
+      pricing_mode:
+        example: distance_time
+        type: string
+      search_radius_meters:
+        example: 5000
+        type: integer
     type: object
   github_com_kishert-lab_taxi-platform_internal_dto.OrderResponse:
     properties:
@@ -1359,6 +1394,8 @@ definitions:
         $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.PointDTO'
       price:
         $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.MoneyResponse'
+      pricing:
+        $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.OrderPricingResponse'
       status:
         allOf:
         - $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_domain.OrderStatus'
@@ -3055,9 +3092,16 @@ definitions:
         example: 10000
         minimum: 0
         type: integer
+      car_class_id:
+        example: 33333333-3333-3333-3333-333333333333
+        type: string
       description:
         example: Local economy tariff
         type: string
+      fixed_price_cents:
+        example: 25000
+        minimum: 0
+        type: integer
       fixed_routes:
         items:
           type: object
@@ -3080,6 +3124,14 @@ definitions:
         example: 500
         minimum: 0
         type: integer
+      pricing_mode:
+        enum:
+        - fixed
+        - distance
+        - time
+        - distance_time
+        example: distance_time
+        type: string
     type: object
   github_com_kishert-lab_taxi-platform_internal_dto.TaxiParkTariffRequest:
     properties:
@@ -3087,9 +3139,16 @@ definitions:
         example: 10000
         minimum: 0
         type: integer
+      car_class_id:
+        example: 33333333-3333-3333-3333-333333333333
+        type: string
       description:
         example: Local economy tariff
         type: string
+      fixed_price_cents:
+        example: 25000
+        minimum: 0
+        type: integer
       fixed_routes:
         items:
           type: object
@@ -3112,6 +3171,14 @@ definitions:
         example: 500
         minimum: 0
         type: integer
+      pricing_mode:
+        enum:
+        - fixed
+        - distance
+        - time
+        - distance_time
+        example: distance_time
+        type: string
     required:
     - name
     type: object
@@ -3119,12 +3186,17 @@ definitions:
     properties:
       base_price:
         $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.MoneyCentsResponse'
+      car_class_id:
+        example: 33333333-3333-3333-3333-333333333333
+        type: string
       created_at:
         example: "2026-05-12T12:00:00Z"
         type: string
       description:
         example: Local economy tariff
         type: string
+      fixed_price:
+        $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.MoneyCentsResponse'
       fixed_routes:
         additionalProperties:
           type: string
@@ -3144,6 +3216,9 @@ definitions:
         $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.MoneyCentsResponse'
       price_per_minute:
         $ref: '#/definitions/github_com_kishert-lab_taxi-platform_internal_dto.MoneyCentsResponse'
+      pricing_mode:
+        example: distance_time
+        type: string
       taxi_park_id:
         example: 22222222-2222-2222-2222-222222222222
         type: string
